--- a/Slicebox-master/css/custom.css
+++ b/Slicebox-master/css/custom.css
@@ -1,15 +1,15 @@
-.shadow {
+/* .shadow {
 	width: 100%;
 	height: 168px;
 	position: relative;
 	margin-top: -110px;
 	background: transparent url(../images/shadow.png) no-repeat bottom center;
-	background-size: 100% 100%; /* stretches it */
+	background-size: 100% 100%; 
 	z-index: -1;
 	display: none;
-}
+} */
 
-.sb-description h3 {
+/* .sb-description h3 {
 	font-size: 20px;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 }
@@ -106,4 +106,4 @@
 
 .nav-options span:hover {
 	opacity: 1;
-}
+} */
