--- a/Slicebox-master/css/demo.css
+++ b/Slicebox-master/css/demo.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=PT+Sans+Narrow|Volkhov:400italic,700);
+/* @import url(http://fonts.googleapis.com/css?family=PT+Sans+Narrow|Volkhov:400italic,700);
 
 *,
 *:after,
@@ -8,17 +8,17 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-}
+} */
 
 /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
-.clearfix:after {
+/* .clearfix:after {
 	content: "";
 	display: table;
 	clear: both;
-}
+} */
 
 /* General Demo Style */
-body {
+/* body {
 	background: #e4ebe9 url(../images/fancy_deboss.png) repeat top left;
 	color: #444;
 	font-family: "PT Sans Narrow", Arial, sans-serif;
@@ -59,10 +59,10 @@ h1 span, h5 {
 	width: 100%;
 	padding: 0 50px;
 	margin: 0 auto;
-}
+} */
 
 /* Header Style */
-.codrops-top {
+/* .codrops-top {
 	line-height: 24px;
 	font-size: 11px;
 	background: #fff;
@@ -92,10 +92,10 @@ h1 span, h5 {
 .codrops-top span.right a {
 	float: left;
 	display: block;
-}
+} */
 
 /* More examples buttons */
-
+/* 
 .more {
 	position: relative;
 	clear: both;
@@ -159,6 +159,6 @@ p.info {
 	clear: both;
 	text-align: center;
 	width: 100%;
-	max-wdith: 440px;
+	max-width: 440px;
 	margin: 0 auto;
-}
+} */
