--- a/css/style.css
+++ b/css/style.css
@@ -898,6 +898,7 @@ main {
     height: 104px;
     background-color: white;
     box-shadow: 0px 0px 10px .1px gray;
+    cursor: pointer;
     /* box-shadow: 1px 0px 10px 2px black; */
 }
 
@@ -926,6 +927,15 @@ i.icon-slider_arrow:hover {
 .img_slider {
     display: flex;
     width: 100%;
+}
+#image_slide_box{
+    position: relative;
+    z-index: 0;
+}
+#image_slide_box li{
+    background-color: transparent;
+    /* pointer-events: none; */
+    cursor: none;
 }
 
 .img_slider input {
@@ -968,7 +978,7 @@ i.icon-slider_arrow:hover {
 
 /* RADIO BUTTONS CHECKED STATE START - IMAGE SLIDING  */
 
-#radio_1:checked~.slide_1 {
+/* #radio_1:checked~.slide_1 {
     margin-left: 0%;
 }
 
@@ -990,14 +1000,14 @@ i.icon-slider_arrow:hover {
 
 #radio_6:checked~.slide_1 {
     margin-left: -500%;
-}
+} */
 
 /* RADIO BUTTONS CHECKED STATE END - IMAGE SLIDING  */
 
-.slide_1 {
+/* .slide_1 {
     margin-left: 0%;
     transition: .25s;
-}
+} */
 
 .auto-navigation {
     position: absolute;
@@ -1052,15 +1062,31 @@ i.icon-slider_arrow:hover {
     cursor: pointer;
     margin: 0 0rem;
     transition: background-color .25s, box-shadow .3s;
-    animation: marginate 1s linear .5s forwards;
+    animation: marginate 1s ease .5s forwards;
+    position: relative;
+    z-index: 1;
 }
 
 .transparent_label_box {
-    position: absolute;
-    /* background-color: black;
-    height: 100%;
-    width: 100%; */
+        position: absolute;
+        background-color: #00000021;
+        height: 230%;
+        width: 23%;
+        border-radius: 15px;
+        margin-top: -8.5px;
+        animation: width_increase 1s ease .5s forwards;
+        z-index: 0;
 }
+
+@keyframes width_increase{
+    0%{
+        width: 5%;
+    }
+    100%{
+        width: 23%;
+    }
+}
+
 
 @keyframes marginate {
     0% {
