--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,7 @@
 }
 
 html{
-    height: 100%;
-    width: 100%;
-}
-
-body{
-    height: 100%;
-    width: 100%;
+    /* font-size: 10px; */
 }
 
 :root {
